--- a/users/templates/takeImage.html
+++ b/users/templates/takeImage.html
@@ -31,6 +31,7 @@
 
 <h1>Image Checker</h1>
 <video autoplay></video>
+          {{ mesg }}
 <form id="myAwesomeForm" method="post" action="/php-code-that-handles-fileupload.php">
     {% csrf_token %}
 </form>
